--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -8,7 +8,7 @@ search_path = "0.1.4"
 
 camino.workspace = true
 chrono.workspace = true
-structopt.workspace = true
+clap.workspace = true
 anyhow.workspace = true
 curl.workspace = true
 omicron-zone-package.workspace = true
