--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ camino = { version = "1.1", features = ["serde1"] }
 cfg-if = "1"
 chrono = "0.4"
 colored = "2"
+clap = { version = "4.5.8", features = [ "derive" ] }
 csv = "1.3"
 curl = "0.4"
 display-error-chain = "0.2"
@@ -96,7 +97,6 @@ slog-async = "2.8"
 slog-bunyan = "2.5"
 slog-term = "2.9"
 socket2 = { version = "0.6", features = ["all"] }
-structopt = "0.3"
 strum = { version = "0.26.3", features = [ "derive" ] }
 syn = { version = "2.0", features = ["extra-traits"]}
 tabwriter = { version = "1", features = ["ansi_formatting"] }
