--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -30,6 +30,7 @@ dpd-types.workspace = true
 anyhow.workspace = true
 cfg-if.workspace = true
 chrono.workspace = true
+clap.workspace = true
 console-subscriber = { version = "0.4.1", optional = true }
 csv.workspace = true
 display-error-chain.workspace = true
@@ -46,7 +47,6 @@ serde_json.workspace = true
 signal-hook.workspace = true
 signal-hook-tokio.workspace = true
 slog.workspace = true
-structopt.workspace = true
 strum.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
