--- a/tfportd/Cargo.toml
+++ b/tfportd/Cargo.toml
@@ -26,7 +26,7 @@ signal-hook.workspace = true
 slog.workspace = true
 smf.workspace = true
 socket2.workspace = true
-structopt.workspace = true
+clap.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 uuid.workspace = true
