--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,6 @@ chrono = "0.4"
 colored = "2"
 csv = "1.3"
 curl = "0.4"
-display-error-chain = "0.2"
 dropshot = "0.15.1"
 expectorate = "1"
 futures = "0.3"
@@ -84,6 +83,7 @@ signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
 slog = { version = "2.7", features = [ "release_max_level_debug", "max_level_trace" ] }
 slog-async = "2.8"
 slog-bunyan = "2.5"
+slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain", branch = "main" }
 slog-term = "2.9"
 socket2 = { version = "0.5", features = ["all"] }
 structopt = "0.3"
