--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -30,7 +30,6 @@ cfg-if.workspace = true
 chrono.workspace = true
 console-subscriber = { version = "0.4.1", optional = true }
 csv.workspace = true
-display-error-chain.workspace = true
 futures.workspace = true
 libc.workspace = true
 openssl.workspace = true
@@ -44,6 +43,7 @@ serde_json.workspace = true
 signal-hook.workspace = true
 signal-hook-tokio.workspace = true
 slog.workspace = true
+slog-error-chain.workspace = true
 structopt.workspace = true
 strum.workspace = true
 thiserror.workspace = true
