Move everything we can from .cargo/config.toml to Config.toml Remove obsolete keys from .cargo/config.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ members = [
 
 resolver = "2"
 
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
 
 [workspace.dependencies]
 
