--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -59,6 +59,7 @@ internal-dns-resolver.workspace = true
 internal-dns-types.workspace = true
 nexus-client.workspace = true
 omicron-common.workspace = true
+oxide-tokio-rt.workspace = true
 oximeter.workspace = true
 oximeter-producer.workspace = true
 smf.workspace = true
