[2/n] [dpd] migrate to API trait (#116)
Part of https://github.com/oxidecomputer/omicron/issues/8922. I had to do a lot of code movement in this PR, but there aren't any functional changes in it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ members = [
 	"aal_macros",
 	"common",
 	"dpd",
+	"dpd-api",
 	"dpd-client",
+	"dpd-types",
 	"packet",
 	"pcap",
 	"swadm",
@@ -29,7 +31,9 @@ panic = "abort"
 aal = { path = "aal" }
 aal_macros = { path = "aal_macros" }
 asic = { path = "asic" }
+dpd-api = { path = "dpd-api" }
 dpd-client = { path = "dpd-client" }
+dpd-types = { path = "dpd-types" }
 common = { path = "common" }
 packet = { path = "packet" }
 pcap = { path = "pcap" }
