[spr] initial version
Created using spr 1.3.6-beta.1

--- a/dpd-types/Cargo.toml
+++ b/dpd-types/Cargo.toml
@@ -12,5 +12,5 @@ oxnet.workspace = true
 schemars.workspace = true
 serde.workspace = true
 thiserror.workspace = true
-transceiver-controller.workspace = true
+transceiver-controller = { workspace = true, features = ["api-traits"] }
 uuid.workspace = true
