--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
 	"dpd-api",
 	"dpd-client",
 	"dpd-types",
+	"dropshot-apis",
 	"packet",
 	"pcap",
 	"swadm",
@@ -62,12 +63,14 @@ bytes = "1.6"
 camino = { version = "1.1", features = ["serde1"] }
 cfg-if = "1"
 chrono = "0.4"
-colored = "2"
 clap = { version = "4.5.8", features = [ "derive" ] }
+colored = "2"
 csv = "1.3"
 curl = "0.4"
 display-error-chain = "0.2"
 dropshot = "0.16.3"
+dropshot-api-manager = "0.1.1"
+dropshot-api-manager-types = "0.1.1"
 expectorate = "1"
 futures = "0.3"
 http = "1.2.0"
