--- a/dpd-api/Cargo.toml
+++ b/dpd-api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 common.workspace = true
 dpd-types.workspace = true
 dropshot.workspace = true
+dropshot-api-manager-types.workspace = true
 oxnet.workspace = true
 schemars.workspace = true
 serde.workspace = true
