[deps] Update Omicron `main` related deps to 64b40cb
This PR is a precursor to a follow-up PR that leverages
updated code in `omicron-common`. This gets dendrite
in line with Omicron `main`, capturing an upstream
type change that we needed to accomodate.

--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -57,6 +57,7 @@ reqwest.workspace = true
 
 dropshot = { workspace = true, features = [ "usdt-probes" ] }
 gateway-client.workspace = true
+gateway-types.workspace = true
 internal-dns-resolver.workspace = true
 internal-dns-types.workspace = true
 nexus-client.workspace = true
