[post-merge] updates

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,7 @@ xtask = "run --package xtask --"
 # See https://doc.rust-lang.org/cargo/reference/config.html#target.
 [build]
 rustflags = ["--cfg", "tokio_unstable"]
+
+# TODO: remove once we're targetting omicron `main`
+[env]
+DEP_PQ_LIBDIRS = "1"
