--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
 [workspace]
 
 members = [
-	"aal",
-	"asic",
-	"aal_macros",
-	"common",
-	"dpd",
-	"dpd-api",
-	"dpd-client",
-	"dpd-types",
-	"dropshot-apis",
-	"packet",
-	"pcap",
-	"swadm",
-	"tfportd",
-	"uplinkd",
-	"xtask",
+  "aal",
+  "asic",
+  "aal_macros",
+  "common",
+  "dpd",
+  "dpd-api",
+  "dpd-client",
+  "dpd-types",
+  "dropshot-apis",
+  "packet",
+  "pcap",
+  "swadm",
+  "tfportd",
+  "uplinkd",
+  "xtask",
 ]
 
 resolver = "2"
@@ -47,14 +47,19 @@ gateway-client = { git = "https://github.com/oxidecomputer/omicron", branch = "m
 gateway-types = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
 libnet = { git = "https://github.com/oxidecomputer/netadm-sys" }
 nexus-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
-omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch= "zl/mcast-implicit-lifecycle" }
-oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "zl/mcast-implicit-lifecycle" }
-oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "zl/mcast-implicit-lifecycle" }
-oximeter-instruments = { git = "https://github.com/oxidecomputer/omicron", branch = "zl/mcast-implicit-lifecycle", default-features = false, features = ["kstat"] }
-oxnet = { version = "0.1.4", default-features = false, features = ["schemars", "serde"] }
+omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
+oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
+oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
+oximeter-instruments = { git = "https://github.com/oxidecomputer/omicron", branch = "main", default-features = false, features = [
+  "kstat",
+] }
+oxnet = { version = "0.1.4", default-features = false, features = [
+  "schemars",
+  "serde",
+] }
 propolis = { git = "https://github.com/oxidecomputer/propolis" }
 smf = { git = "https://github.com/illumos/smf-rs" }
-softnpu-lib = { git = "https://github.com/oxidecomputer/softnpu" , package = "softnpu" , branch = "main"}
+softnpu-lib = { git = "https://github.com/oxidecomputer/softnpu", package = "softnpu", branch = "main" }
 tofino = { git = "https://github.com/oxidecomputer/tofino", branch = "main" }
 transceiver-controller = { git = "https://github.com/oxidecomputer/transceiver-control", branch = "main" }
 
@@ -64,7 +69,7 @@ bytes = "1.6"
 camino = { version = "1.1", features = ["serde1"] }
 cfg-if = "1"
 chrono = "0.4"
-clap = { version = "4.5.50", features = [ "derive" ] }
+clap = { version = "4.5.50", features = ["derive"] }
 colored = "3"
 csv = "1.3"
 curl = "0.4"
@@ -95,20 +100,23 @@ semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3"
-signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
-slog = { version = "2.7", features = [ "release_max_level_debug", "max_level_trace" ] }
+signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
+slog = { version = "2.7", features = [
+  "release_max_level_debug",
+  "max_level_trace",
+] }
 slog-async = "2.8"
 slog-bunyan = "2.5"
 slog-term = "2.9"
 socket2 = { version = "0.6", features = ["all"] }
-strum = { version = "0.27", features = [ "derive" ] }
-syn = { version = "2.0", features = ["extra-traits"]}
+strum = { version = "0.27", features = ["derive"] }
+syn = { version = "2.0", features = ["extra-traits"] }
 tabwriter = { version = "1", features = ["ansi_formatting"] }
 thiserror = "1.0"
 tokio = "1.37"
 toml = "0.9"
 usdt = "0.6"
-uuid = { version = "1.10", features = [ "v4", "serde" ] }
+uuid = { version = "1.10", features = ["v4", "serde"] }
 internet-checksum = "0.2"
 
 #
