--- a/swadm/Cargo.toml
+++ b/swadm/Cargo.toml
@@ -5,6 +5,9 @@ version = "0.1.0"
 authors = ["nils <nils@oxide.computer>"]
 edition = "2024"
 
+[features]
+multicast = []
+
 [dependencies]
 anyhow.workspace = true
 chrono.workspace = true
