[asic-details] Add lotnum (4-character lot number) to SwitchIdentifiers
This PR adds lotnum (4-character lot number) to SwitchIdentifiers and exposes
ASIC details via swadm (and the dpd-client API). The full lot identifier combines
fab, lot, and lotnum (e.g., FTCAK7 instead of just T).

We do keep the current fields separated however, but update the view
for the combination.

Adds v1::SwitchIdentifiers for API versions 1-4 (without lotnum), with the
latest version (v5+) including the new field.

Fixes #200: Want swadm command to print Tofino ASIC details
Fixes #202: Not reporting full lot numbers in oximeter statistics

--- a/dpd-api/Cargo.toml
+++ b/dpd-api/Cargo.toml
@@ -12,3 +12,4 @@ oxnet.workspace = true
 schemars.workspace = true
 serde.workspace = true
 transceiver-controller.workspace = true
+uuid.workspace = true
