--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["nils <nils@oxide.computer>"]
 edition = "2024"
 
 [features]
+multicast = ["aal/multicast", "asic/multicast"]
 tofino_asic = ["asic/tofino_asic"]
 tofino_stub = ["asic/tofino_stub"]
 softnpu = ["asic/softnpu"]
