memtest mode, tcam scrub, interrupt plumbing

--- a/swadm/Cargo.toml
+++ b/swadm/Cargo.toml
@@ -15,6 +15,7 @@ dpd-client.workspace = true
 futures.workspace = true
 oxide-tokio-rt.workspace = true
 oxnet.workspace = true
+reqwest.workspace = true
 slog.workspace = true
 tabwriter.workspace = true
 tokio.workspace = true
