--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,11 +85,12 @@ oxide-tokio-rt = "0.1.2"
 parking_lot = "0.12"
 pretty_assertions = "1.4"
 proc-macro2 = "1.0"
-progenitor = "0.11"
+progenitor = "0.12"
 rand = "0.9"
 regex = "1.12"
 regress = "0.10"
-reqwest = { version = "0.12", default-features = false }
+reqwest = { version = "0.13", default-features = false }
+reqwest012 = { package = "reqwest", version = "0.12", default-features = false }
 schemars = "0.8"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -115,5 +116,3 @@ internet-checksum = "0.2"
 # It's common during development to use a local copy of various complex
 # dependencies.  If you want to use those, uncomment one of these blocks.
 #
-# [patch."https://github.com/oxidecomputer/omicron"]
-# oximeter = { path = "../omicron/oximeter/oximeter" }
