[multicast] default multicast feature across all crates
Enable multicast by default so the packaged artifacts include multicast
support without requiring explicit feature flags at build time.

--- a/dpd/Cargo.toml
+++ b/dpd/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["nils <nils@oxide.computer>"]
 edition = "2024"
 
 [features]
+default = ["multicast"]
 multicast = ["aal/multicast", "asic/multicast"]
 tofino_asic = ["asic/tofino_asic"]
 tofino_stub = ["asic/tofino_stub"]
