code review comment

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ dropshot-api-manager-types = "0.2.2"
 expectorate = "1"
 futures = "0.3"
 http = "1.2.0"
+humantime = "2.3"
 kstat-rs = "0.2.4"
 lazy_static = "1.5"
 libc = "0.2"
