[multicast] Narrow underlay scope to ff04::/64 and add ASM source filtering (#189)
Underlay changes:
- Restrict internal multicast from admin/site/org scoped (ff04, ff05, ff08)
  to just Omicron's reserved subnet (ff04::/64). These underlay addresses are
  made unique in Omicron.
- Rename `AdminScopedIpv6` to `UnderlayMulticastIpv6`.
- Simplify P4 to only match ff04::/64.
- Use omicron-common multicast constants for validation.

Source filtering changes:
- Replace IpSrc::Subnet with IpSrc::Any for any-source matching.
- Change IPv6 source filter from exact to LPM match.
- Allow source filters on ASM groups (previously SSM-only).

API changes:
- API v5 adds IpSrc::Any for ASM source filtering.
- API v6 enforces strict underlay subnet validation.

--- a/dpd-client/Cargo.toml
+++ b/dpd-client/Cargo.toml
@@ -34,6 +34,7 @@ packet = { path = "../packet" }
 pcap = { path = "../pcap" }
 asic = { path = "../asic" }
 anyhow.workspace = true
+dpd-types.workspace = true
 lazy_static.workspace = true
 parking_lot.workspace = true
 rand.workspace = true
